begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/** * Licensed to the Apache Software Foundation (ASF) under one * or more contributor license agreements.  See the NOTICE file * distributed with this work for additional information * regarding copyright ownership.  The ASF licenses this file * to you under the Apache License, Version 2.0 (the * "License"); you may not use this file except in compliance * with the License.  You may obtain a copy of the License at * *     http://www.apache.org/licenses/LICENSE-2.0 * * Unless required by applicable law or agreed to in writing, software * distributed under the License is distributed on an "AS IS" BASIS, * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. * See the License for the specific language governing permissions and * limitations under the License. */
end_comment

begin_package
DECL|package|org.apache.hadoop.yarn.server.nodemanager.api.protocolrecords.impl.pb
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|server
operator|.
name|nodemanager
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|impl
operator|.
name|pb
package|;
end_package

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|ArrayList
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Iterator
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|api
operator|.
name|records
operator|.
name|impl
operator|.
name|pb
operator|.
name|ProtoBase
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServerNodemanagerServiceProtos
operator|.
name|LocalResourceStatusProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServerNodemanagerServiceProtos
operator|.
name|LocalizerStatusProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|proto
operator|.
name|YarnServerNodemanagerServiceProtos
operator|.
name|LocalizerStatusProtoOrBuilder
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|server
operator|.
name|nodemanager
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|LocalResourceStatus
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|yarn
operator|.
name|server
operator|.
name|nodemanager
operator|.
name|api
operator|.
name|protocolrecords
operator|.
name|LocalizerStatus
import|;
end_import

begin_class
DECL|class|LocalizerStatusPBImpl
specifier|public
class|class
name|LocalizerStatusPBImpl
extends|extends
name|ProtoBase
argument_list|<
name|LocalizerStatusProto
argument_list|>
implements|implements
name|LocalizerStatus
block|{
DECL|field|proto
name|LocalizerStatusProto
name|proto
init|=
name|LocalizerStatusProto
operator|.
name|getDefaultInstance
argument_list|()
decl_stmt|;
DECL|field|builder
name|LocalizerStatusProto
operator|.
name|Builder
name|builder
init|=
literal|null
decl_stmt|;
DECL|field|viaProto
name|boolean
name|viaProto
init|=
literal|false
decl_stmt|;
DECL|field|resources
specifier|private
name|List
argument_list|<
name|LocalResourceStatus
argument_list|>
name|resources
init|=
literal|null
decl_stmt|;
DECL|method|LocalizerStatusPBImpl ()
specifier|public
name|LocalizerStatusPBImpl
parameter_list|()
block|{
name|builder
operator|=
name|LocalizerStatusProto
operator|.
name|newBuilder
argument_list|()
expr_stmt|;
block|}
DECL|method|LocalizerStatusPBImpl (LocalizerStatusProto proto)
specifier|public
name|LocalizerStatusPBImpl
parameter_list|(
name|LocalizerStatusProto
name|proto
parameter_list|)
block|{
name|this
operator|.
name|proto
operator|=
name|proto
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
block|}
DECL|method|getProto ()
specifier|public
name|LocalizerStatusProto
name|getProto
parameter_list|()
block|{
name|mergeLocalToProto
argument_list|()
expr_stmt|;
name|proto
operator|=
name|viaProto
condition|?
name|proto
else|:
name|builder
operator|.
name|build
argument_list|()
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
return|return
name|proto
return|;
block|}
DECL|method|mergeLocalToBuilder ()
specifier|private
name|void
name|mergeLocalToBuilder
parameter_list|()
block|{
if|if
condition|(
name|this
operator|.
name|resources
operator|!=
literal|null
condition|)
block|{
name|addResourcesToProto
argument_list|()
expr_stmt|;
block|}
block|}
DECL|method|mergeLocalToProto ()
specifier|private
name|void
name|mergeLocalToProto
parameter_list|()
block|{
if|if
condition|(
name|viaProto
condition|)
name|maybeInitBuilder
argument_list|()
expr_stmt|;
name|mergeLocalToBuilder
argument_list|()
expr_stmt|;
name|proto
operator|=
name|builder
operator|.
name|build
argument_list|()
expr_stmt|;
name|viaProto
operator|=
literal|true
expr_stmt|;
block|}
DECL|method|maybeInitBuilder ()
specifier|private
name|void
name|maybeInitBuilder
parameter_list|()
block|{
if|if
condition|(
name|viaProto
operator|||
name|builder
operator|==
literal|null
condition|)
block|{
name|builder
operator|=
name|LocalizerStatusProto
operator|.
name|newBuilder
argument_list|(
name|proto
argument_list|)
expr_stmt|;
block|}
name|viaProto
operator|=
literal|false
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|getLocalizerId ()
specifier|public
name|String
name|getLocalizerId
parameter_list|()
block|{
name|LocalizerStatusProtoOrBuilder
name|p
init|=
name|viaProto
condition|?
name|proto
else|:
name|builder
decl_stmt|;
if|if
condition|(
operator|!
name|p
operator|.
name|hasLocalizerId
argument_list|()
condition|)
block|{
return|return
literal|null
return|;
block|}
return|return
operator|(
name|p
operator|.
name|getLocalizerId
argument_list|()
operator|)
return|;
block|}
annotation|@
name|Override
DECL|method|getResources ()
specifier|public
name|List
argument_list|<
name|LocalResourceStatus
argument_list|>
name|getResources
parameter_list|()
block|{
name|initResources
argument_list|()
expr_stmt|;
return|return
name|this
operator|.
name|resources
return|;
block|}
annotation|@
name|Override
DECL|method|setLocalizerId (String localizerId)
specifier|public
name|void
name|setLocalizerId
parameter_list|(
name|String
name|localizerId
parameter_list|)
block|{
name|maybeInitBuilder
argument_list|()
expr_stmt|;
if|if
condition|(
name|localizerId
operator|==
literal|null
condition|)
block|{
name|builder
operator|.
name|clearLocalizerId
argument_list|()
expr_stmt|;
return|return;
block|}
name|builder
operator|.
name|setLocalizerId
argument_list|(
name|localizerId
argument_list|)
expr_stmt|;
block|}
DECL|method|initResources ()
specifier|private
name|void
name|initResources
parameter_list|()
block|{
if|if
condition|(
name|this
operator|.
name|resources
operator|!=
literal|null
condition|)
block|{
return|return;
block|}
name|LocalizerStatusProtoOrBuilder
name|p
init|=
name|viaProto
condition|?
name|proto
else|:
name|builder
decl_stmt|;
name|List
argument_list|<
name|LocalResourceStatusProto
argument_list|>
name|list
init|=
name|p
operator|.
name|getResourcesList
argument_list|()
decl_stmt|;
name|this
operator|.
name|resources
operator|=
operator|new
name|ArrayList
argument_list|<
name|LocalResourceStatus
argument_list|>
argument_list|()
expr_stmt|;
for|for
control|(
name|LocalResourceStatusProto
name|c
range|:
name|list
control|)
block|{
name|this
operator|.
name|resources
operator|.
name|add
argument_list|(
name|convertFromProtoFormat
argument_list|(
name|c
argument_list|)
argument_list|)
expr_stmt|;
block|}
block|}
DECL|method|addResourcesToProto ()
specifier|private
name|void
name|addResourcesToProto
parameter_list|()
block|{
name|maybeInitBuilder
argument_list|()
expr_stmt|;
name|builder
operator|.
name|clearResources
argument_list|()
expr_stmt|;
if|if
condition|(
name|this
operator|.
name|resources
operator|==
literal|null
condition|)
return|return;
name|Iterable
argument_list|<
name|LocalResourceStatusProto
argument_list|>
name|iterable
init|=
operator|new
name|Iterable
argument_list|<
name|LocalResourceStatusProto
argument_list|>
argument_list|()
block|{
annotation|@
name|Override
specifier|public
name|Iterator
argument_list|<
name|LocalResourceStatusProto
argument_list|>
name|iterator
parameter_list|()
block|{
return|return
operator|new
name|Iterator
argument_list|<
name|LocalResourceStatusProto
argument_list|>
argument_list|()
block|{
name|Iterator
argument_list|<
name|LocalResourceStatus
argument_list|>
name|iter
init|=
name|resources
operator|.
name|iterator
argument_list|()
decl_stmt|;
annotation|@
name|Override
specifier|public
name|boolean
name|hasNext
parameter_list|()
block|{
return|return
name|iter
operator|.
name|hasNext
argument_list|()
return|;
block|}
annotation|@
name|Override
specifier|public
name|LocalResourceStatusProto
name|next
parameter_list|()
block|{
return|return
name|convertToProtoFormat
argument_list|(
name|iter
operator|.
name|next
argument_list|()
argument_list|)
return|;
block|}
annotation|@
name|Override
specifier|public
name|void
name|remove
parameter_list|()
block|{
throw|throw
operator|new
name|UnsupportedOperationException
argument_list|()
throw|;
block|}
block|}
return|;
block|}
block|}
decl_stmt|;
name|builder
operator|.
name|addAllResources
argument_list|(
name|iterable
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|addAllResources (List<LocalResourceStatus> resources)
specifier|public
name|void
name|addAllResources
parameter_list|(
name|List
argument_list|<
name|LocalResourceStatus
argument_list|>
name|resources
parameter_list|)
block|{
if|if
condition|(
name|resources
operator|==
literal|null
condition|)
return|return;
name|initResources
argument_list|()
expr_stmt|;
name|this
operator|.
name|resources
operator|.
name|addAll
argument_list|(
name|resources
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|getResourceStatus (int index)
specifier|public
name|LocalResourceStatus
name|getResourceStatus
parameter_list|(
name|int
name|index
parameter_list|)
block|{
name|initResources
argument_list|()
expr_stmt|;
return|return
name|this
operator|.
name|resources
operator|.
name|get
argument_list|(
name|index
argument_list|)
return|;
block|}
annotation|@
name|Override
DECL|method|addResourceStatus (LocalResourceStatus resource)
specifier|public
name|void
name|addResourceStatus
parameter_list|(
name|LocalResourceStatus
name|resource
parameter_list|)
block|{
name|initResources
argument_list|()
expr_stmt|;
name|this
operator|.
name|resources
operator|.
name|add
argument_list|(
name|resource
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|removeResource (int index)
specifier|public
name|void
name|removeResource
parameter_list|(
name|int
name|index
parameter_list|)
block|{
name|initResources
argument_list|()
expr_stmt|;
name|this
operator|.
name|resources
operator|.
name|remove
argument_list|(
name|index
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Override
DECL|method|clearResources ()
specifier|public
name|void
name|clearResources
parameter_list|()
block|{
name|initResources
argument_list|()
expr_stmt|;
name|this
operator|.
name|resources
operator|.
name|clear
argument_list|()
expr_stmt|;
block|}
specifier|private
name|LocalResourceStatus
DECL|method|convertFromProtoFormat (LocalResourceStatusProto p)
name|convertFromProtoFormat
parameter_list|(
name|LocalResourceStatusProto
name|p
parameter_list|)
block|{
return|return
operator|new
name|LocalResourceStatusPBImpl
argument_list|(
name|p
argument_list|)
return|;
block|}
DECL|method|convertToProtoFormat (LocalResourceStatus s)
specifier|private
name|LocalResourceStatusProto
name|convertToProtoFormat
parameter_list|(
name|LocalResourceStatus
name|s
parameter_list|)
block|{
return|return
operator|(
operator|(
name|LocalResourceStatusPBImpl
operator|)
name|s
operator|)
operator|.
name|getProto
argument_list|()
return|;
block|}
block|}
end_class

end_unit

